--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,28 +35,106 @@
   
   .item img {
     width: 100%;
-    height: 200%;
+    height: 100%;
     object-fit: cover;
   }
   
   @keyframes img-change {
-    0% {
+    0%, 40%, 100% {
       opacity: 0;
     }
-    10% {
+    10%, 20%, 30% {
       opacity: 1;
-    }
-    20% {
-      opacity: 1;
-    }
-    30% {
-      opacity: 1;
-    }
-    40% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0;
     }
   }
   
+  .animate-img-change {
+    animation: img-change 3s linear infinite; /* 3秒かけてループするアニメーション */
+  }
+  
+
+
+  /*tamesi*/
+  /* 共通部分
+------------------------------- */
+html {
+    font-size: 100%;
+}
+body{
+    font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-serif;
+    line-height: 1.7;
+    color: #432;
+}
+a {
+    text-decoration: none;
+}
+img {
+    max-width: 100%;
+}
+.wrapper {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 4%;
+}
+.page-header {
+    display: flex;
+    justify-content: space-between;
+}
+.logo {
+    width: 210px;
+    margin-top: 14px;
+}
+.main-nav {
+    display: flex;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    margin-top: 34px;
+    list-style: none;
+}
+.main-nav li {
+    margin-left: 36px;
+}
+.main-nav a {
+    color: #432;
+}
+.main-nav a:hover {
+    color: #0bd;
+}
+
+.menu-content {
+    max-width: 560px;
+    margin-top: 10%;
+}
+.menu-content .page-title {
+    text-align: center;
+}
+.menu-content p {
+    font-size: 1.125rem;
+    margin: 10px 0 0;
+}
+
+.grid {
+  display: grid;
+  gap: 26px;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  margin-top: 6%;
+  margin-bottom: 50px;
+}
+
+/* 自分で書くよ */
+.spot-title{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/* フッター
+------------------------------- */
+footer {
+    background: rgb(35, 72, 160);
+    text-align: center;
+    padding: 26px 0;
+}
+footer p {
+    color: #fff;
+    font-size: 0.875rem;
+}
