--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,15 @@
     padding: 0;
     box-sizing: border-box;
   }
-  header {
+.header {
     width: 100%;
     height: 70px;
-    background: #333;
+    background: #e52c2c;
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 4%;
   }
   .mv {
     width: 100%;
@@ -35,7 +40,7 @@
   
   .item img {
     width: 100%;
-    height: 100%;
+    height: 140%;
     object-fit: cover;
   }
   
@@ -57,6 +62,17 @@
   /*tamesi*/
   /* 共通部分
 ------------------------------- */
+.heading02{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #000;
+    font-family: 'Times New Roman', Times, serif;   
+    /* ↑これは同じじゃないp122 */
+    margin-top:270px;
+    margin-bottom: -50px;
+}
+
 html {
     font-size: 100%;
 }
@@ -127,6 +143,166 @@ img {
     font-weight: bold;
 }
 
+/*サイト飛ばしボタン*/
+.btn-text-3d {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 37px;
+    color: #799dec;
+    text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.32), 0px 1px 0px #6182ca, 0px 2px 0px #4f6aa7, 0px 3px 0px #5470ad;
+  }
+  .btn-text-3d:active {
+    top: 4px;
+    text-shadow: none;
+  }
+
+/* 大高担当部分 */
+.header {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #FFFFFF; 
+    border-bottom: solid 1px #EEEEEE; 
+    padding: 0 24px; 
+    z-index: 10000; 
+  }
+  
+  
+  .splide__slide.daily-item {
+    margin-right: 20px; 
+    margin-left: 20px; 
+  }
+  .section-lead {
+      text-align: center;
+  }
+  
+  .daily-slideTrack{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .daily-list {
+      padding-top: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 120px;
+      max-width: 80%;
+    }
+    .daily-item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      min-height: 324px;
+     max-width: 50%;
+     margin: 0 auto;
+    }
+    .daily-item {
+      flex-direction: row-reverse;
+      margin-right: 40px;
+    }
+    
+    
+    
+    .daily-itemImage {
+      width: 300px; 
+        height: 200px; 
+        
+        margin: 20px; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-size: 18px;
+      overflow: hidden;
+      width: 480px;
+      height: 320px;
+      flex-shrink: 0;
+      margin-top: 50px;
+    }
+    .daily-itemImage img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+    
+     
+   
+    .daily-itemBody {
+      padding: 48px 56px;
+      width: 100%;
+    }
+    
+    .daily-titleNumber {
+      font-weight: bold;
+      font-size: 58px;
+      line-height: 1;
+      letter-spacing: .05em;
+      color: #0071BC;
+    }
+    
+    .daily-titleText {
+      font-weight: bold;
+      font-size: 50px;
+      line-height: 1.5;
+      letter-spacing: .05em;
+      margin-left: 20px;
+      color: orange;
+    }
+    .daily-titleText2 {
+      font-weight: bold;
+      font-size: 50px;
+      line-height: 1.5;
+      letter-spacing: .05em;
+      margin-left: 20px;
+      color: red;
+    }
+    .daily-titleText3 {
+      font-weight: bold;
+      font-size: 50px;
+      line-height: 1.5;
+      letter-spacing: .05em;
+      margin-left: 20px;
+      color: aqua;
+    }
+    .daily-outline {
+      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .daily-outlineItem::before {
+      content: '';
+      display: block;
+      width: 24px;
+      height: 24px;
+      flex-shrink: 0;
+      background: url(../img/icon-check.svg);
+    }
+    
+    .daily-outlineItem {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-weight: bold;
+      line-height: 1.5;
+      font-size: 14px;
+      letter-spacing: .1em;
+    }
+    
+    .daily-description {
+      font-size: 14px;
+      line-height: 1.8;
+      letter-spacing: .05em;
+      margin-top: 12px;
+    } 
 /* フッター
 ------------------------------- */
 footer {
