--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
   }
 .header {
     width: 100%;
@@ -58,6 +59,40 @@
   }
   
 
+/*使い方*/
+
+
+.use-title{
+    font-size: 30px;
+    font-weight: bold;
+    background: linear-gradient(transparent 60%, #f5a500 30%);
+    width: 350px;
+}
+
+.use{
+    font-weight: bolder;
+}
+
+/* ここからカードレイアウトのスタイリング */
+/* PC　3カラム */
+.bl_media_container {
+ display: flex;
+ flex-wrap: wrap;
+ margin: calc(-30px / 2);
+ padding: 30px;
+}
+.bl_media_itemWrapper {
+ width: calc(100% / 3 - 30px);
+ margin: calc(30px / 2);
+}
+.bl_media_item {
+ outline: 1px solid #000;
+ font-size: 1.5vw;
+}
+
+
+
+
 
   /*tamesi*/
   /* 共通部分
@@ -70,7 +105,8 @@
     font-family: 'Times New Roman', Times, serif;   
     /* ↑これは同じじゃないp122 */
     margin-top:270px;
-    margin-bottom: -50px;
+    margin-bottom: -10px;
+    background: linear-gradient(transparent 60%, yellow 30%);
 }
 
 html {
@@ -85,7 +121,9 @@ a {
     text-decoration: none;
 }
 img {
-    max-width: 100%;
+    /* max-width: 100%; */
+    width: 100%;
+    vertical-align: bottom;
 }
 .wrapper {
     max-width: 1100px;
@@ -96,10 +134,13 @@ img {
     display: flex;
     justify-content: space-between;
 }
+
 .logo {
-    width: 210px;
-    margin-top: 14px;
+  max-width: 120px;
+  max-height: 120px;
+  /* margin-top: 14px; */
 }
+
 .main-nav {
     display: flex;
     font-size: 1.25rem;
@@ -150,6 +191,8 @@ img {
     font-size: 37px;
     color: #799dec;
     text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.32), 0px 1px 0px #6182ca, 0px 2px 0px #4f6aa7, 0px 3px 0px #5470ad;
+    padding: 50px 0px;
+
   }
   .btn-text-3d:active {
     top: 4px;
@@ -157,6 +200,10 @@ img {
   }
 
 /* 大高担当部分 */
+.container{
+    padding-left: 350px;
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -175,16 +222,23 @@ img {
   .splide__slide.daily-item {
     margin-right: 20px; 
     margin-left: 20px; 
+    max-width: 75%;
   }
   .section-lead {
       text-align: center;
   }
   
+.daily-slide{
+  border-left: 3px solid red;
+    padding-left: 10px;
+}
+
   .daily-slideTrack{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    
   }
   
   .daily-list {
